@@ -187,6 +187,10 @@ package DXM;
 				time3 => '$_[0]  $_[1]',
 				talks => 'Talk flag set on $_[0]',
 				talku => 'Talk flag unset on $_[0]',
+				talkend => 'Finished talking to you',
+				talkinst => 'Entering Talkmode, /EX to end, /<cmd> to run a command',
+				talkprompt => 'Talk ($_[0])>',
+				talkstart => 'Starting talking to you',
 				usernf => '*** User record for $_[0] not found ***',
 				wwvs => 'WWV flag set on $_[0]',
 				wwvu => 'WWV flag unset on $_[0]',
